syntax = "proto3";

package coupon_admin;

option csharp_namespace = "Parstech.Shop.Shared.Protos.CouponAdmin";

service CouponAdminService {
  rpc GetCouponsForAdmin (CouponParameterRequest) returns (CouponPageingDto);
  rpc GetCouponById (CouponRequest) returns (CouponDto);
  rpc GetCouponTypes (EmptyRequest) returns (CouponTypesResponse);
  rpc CreateCoupon (CouponDto) returns (ResponseDto);
  rpc UpdateCoupon (CouponDto) returns (ResponseDto);
  rpc DeleteCoupon (CouponRequest) returns (ResponseDto);
}

message CouponParameterRequest {
  int32 current_page = 1;
  int32 take_page = 2;
  string filter = 3;
}

message CouponRequest {
  int32 coupon_id = 1;
}

message EmptyRequest {
}

message CouponPageingDto {
  int32 current_page = 1;
  int32 page_count = 2;
  int32 row_count = 3;
  repeated CouponDto list = 4;
}

message CouponTypesResponse {
  repeated CouponTypeDto types = 1;
}

message CouponTypeDto {
  int32 id = 1;
  string type = 2;
}

message CouponDto {
  int32 id = 1;
  string code = 2;
  int32 amount = 3;
  int32 persent = 4;
  int32 min_price = 5;
  int32 max_price = 6;
  int32 limit_use = 7;
  int32 limit_each_user = 8;
  int32 coupon_type_id = 9;
  string expire_date_shamsi = 10;
  string categury = 11;
  string products = 12;
  string users = 13;
  bool two_use_same_time = 14;
  bool just_new_user = 15;
}

message ResponseDto {
  bool is_successed = 1;
  string message = 2;
  string object = 3;
  repeated ValidationError errors = 4;
}

message ValidationError {
  string property_name = 1;
  string error_message = 2;
} 