syntax = "proto3";

option csharp_namespace = "Parstech.Shop.Shared.Protos.DashboardAdmin";

package dashboardAdmin;

service DashboardAdminService {
  // Dashboard operations
  rpc GetDashboardCounts (EmptyRequest) returns (IndexCountsDto);
}

// Common message types
message EmptyRequest {}

// Dashboard data
message IndexCountsDto {
  string time = 1;
  int32 user_count = 2;
  int32 product_count = 3;
  int32 is_load_order_count = 4;
  int32 all_transactions_count = 5;
  int32 coin_transactions_count = 6;
  int32 wallet_transactions_count = 7;
  int32 facilities_transactions_count = 8;
  int32 pish_factor_count = 9;
  int32 sourat_hesab_count = 10;
  repeated RepresentationsSells representations_products_for_map = 11;
  repeated RepresentationsProducts representations_products_for_chart = 12;
}

message RepresentationsProducts {
  string representation_name = 1;
  int32 representation_products = 2;
}

message RepresentationsSells {
  string representation_name = 1;
  double latitude = 2;
  double longitude = 3;
  int64 representation_sells = 4;
} 