syntax = "proto3";

option csharp_namespace = "Parstech.Shop.Shared.Protos.PropertyAdmin";

package propertyAdmin;

service PropertyAdminService {
  // Property operations
  rpc GetPropertyById (PropertyRequest) returns (PropertyDto);
  rpc GetProperties (PropertyParameterRequest) returns (PropertyPagingDto);
  rpc CreateProperty (PropertyRequest) returns (ResponseDto);
  rpc UpdateProperty (PropertyRequest) returns (ResponseDto);
  rpc DeleteProperty (PropertyRequest) returns (ResponseDto);
  
  // Property Category operations
  rpc GetAllCategories (EmptyRequest) returns (CategoryListDto);
  rpc CreateOrUpdatePropertyCategory (PropertyCategoryRequest) returns (ResponseDto);
}

message EmptyRequest {
}

message PropertyRequest {
  int32 property_id = 1;
  string title = 2;
  int32 sort_order = 3;
  bool is_color = 4;
  bool is_active = 5;
}

message PropertyParameterRequest {
  int32 page_index = 1;
  int32 page_size = 2;
  string search_key = 3;
}

message PropertyDto {
  int32 id = 1;
  string title = 2;
  int32 sort_order = 3;
  bool is_color = 4;
  bool is_active = 5;
  repeated CategoryDto categories = 6;
}

message PropertyPagingDto {
  int32 page_index = 1;
  int32 page_size = 2;
  int32 total_pages = 3;
  int32 total_count = 4;
  bool has_previous_page = 5;
  bool has_next_page = 6;
  repeated PropertyDto data = 7;
}

message CategoryDto {
  int32 id = 1;
  string title = 2;
  string image = 3;
  string slug = 4;
  int32 parent_id = 5;
  bool is_active = 6;
  int32 sort_order = 7;
}

message CategoryListDto {
  repeated CategoryDto data = 1;
}

message PropertyCategoryRequest {
  int32 property_id = 1;
  int32 category_id = 2;
}

message ResponseDto {
  bool status = 1;
  string message = 2;
  int32 code = 3;
} 