syntax = "proto3";

option csharp_namespace = "Parstech.Shop.Shared.Protos.SelectionsAdmin";

package selectionsAdmin;

service SelectionsAdminService {
  // Selection operations
  rpc GetDiscountSectionsSelect (EmptyRequest) returns (SectionListResponse);
  rpc GetProductsSelect (EmptyRequest) returns (ProductSelectListResponse);
  rpc GetCategoriesSelect (EmptyRequest) returns (CategorySelectListResponse);
}

// Common message types
message EmptyRequest {}

// Section message types
message SectionDto {
  int32 id = 1;
  string title = 2;
  string section_name = 3;
  int32 order = 4;
  bool is_active = 5;
  bool is_discount = 6;
}

message SectionListResponse {
  repeated SectionDto sections = 1;
  bool is_success = 2;
  string message = 3;
}

// Product message types
message ProductSelectDto {
  int32 id = 1;
  string name = 2;
  string image = 3;
  string latin_name = 4;
  int32 type_id = 5;
  string type_name = 6;
  int32 store_id = 7;
  string store_name = 8;
  double price = 9;
  double sale_price = 10;
}

message ProductSelectListResponse {
  repeated ProductSelectDto products = 1;
  bool is_success = 2;
  string message = 3;
}

// Category message types
message CategorySelectDto {
  int32 id = 1;
  string title = 2;
  string latin_title = 3;
  int32 parent_id = 4;
  bool is_parent = 5;
  string image = 6;
}

message CategorySelectListResponse {
  repeated CategorySelectDto categories = 1;
  bool is_success = 2;
  string message = 3;
} 